patch method for Movie works.
